--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -213,7 +213,8 @@
       </div>
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2">
-          <form class="form-horizontal" action="#" method="POST" onsubmit="return verifForm(this)">
+          <!-- <form class="form-horizontal" action="#" method="POST" onsubmit="return verifForm(this)"> -->
+          <form class="form-horizontal" action="#" method="post">
             <div class="form-group">
               <input type="text" class="form-control" id="sender_mail" name="sender_mail" placeholder="Adresse email" onblur="verifMail(this)">
             </div>
@@ -244,7 +245,9 @@
     <script>
     $(function(){
       $(contact_btn).click(function(){
-        $.post('/contact', { nom: 'Pierre34', reponse: 'succes', post='test.' }, function(data) {
+        var mail = $('#sender_mail').val();
+        var msg = $('#msg').val();
+        $.post('/contact', {'sender_mail' : mail, 'message' : msg, 'reponse' : 'success'}, function(data) {
           alert(data);
         });
       })
