--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -221,7 +221,7 @@
             <div class="form-group ">
               <textarea  class="form-control" id="msg" name="msg" placeholder="Votre message" style="resize:none;" rows="5" onblur="verifMsg(this)"></textarea>
             </div>
-            <button type="submit" class="btn btn-default center-block" id="contact_btn">Envoyer</button>
+            <button type="button" class="btn btn-default center-block" id="contact_btn">Envoyer</button>
             <hr>
           </form>
         </div>
@@ -250,8 +250,8 @@
           $.ajax({
             url : '/contact',
             type : 'POST', // Le type de la requête HTTP, ici devenu POST
-            data : 'email=' + mail + '&contenu=' + msg, // On fait passer nos variables, exactement comme en GET, au script more_com.php
-            dataType : 'html'
+            data : 'email : ' + mail + '&contenu : ' + msg + '&reponse : ' + 'success', // On fait passer nos variables, exactement comme en GET, au script more_com.php
+            dataType : 'json'
           });
         });
       });
