--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -218,9 +218,9 @@
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2">
           <!-- <form class="form-horizontal" action="#" method="POST" onsubmit="return verifForm(this)"> -->
-          <form class="form-horizontal" id="contact-form" action="#section3" method="post" onsubmit="return verifForm(this)">
+          <form class="form-horizontal" id="contact-form" action="#section3" method="post"> <!-- onsubmit="return verifForm(this)"> -->
             <div class="form-group">
-              <input type="text" class="form-control" id="sender_mail" name="sender_mail" placeholder="Adresse email" onblur="verifMail(this)">
+              <input type="text" class="form-control" id="sender_mail" name="sender_mail" placeholder="Adresse email"> <!--  onblur="verifMail(this)"> -->
             </div>
             <div class="form-group ">
               <textarea  class="form-control" id="msg" name="msg" placeholder="Votre message" style="resize:none;" rows="5"></textarea>
