added text in front of logo

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -39,8 +39,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="https://relayers.fr"><img src="../imgs/logo.png" alt="Relayers">
-        </a>
+        <a class="navbar-brand" style="color:#F7230C!important" href="https://relayers.fr"><span><img src="../imgs/logo.png" width="25" alt="Relayers"></span> Relayers</a>
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav">
