added more signals from server

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -203,6 +203,14 @@
         <a href="#section3" class="close" data-dismiss="alert">&times;</a>
         <strong>Votre message a bien été envoyé !</strong> Nous vous recontacterons au plus vite :)
       </div>
+      <div id="sender-error-alert" style="display: none" class="col-lg-6 col-lg-offset-3 alert alert-danger text-center">
+        <a href="#section3" class="close" data-dismiss="alert">&times;</a>
+        <strong>Erreur : </strong> veuillez vérifier votre adresse e-mail
+      </div>
+      <div id="msg-error-alert" style="display: none" class="col-lg-6 col-lg-offset-3 alert alert-danger text-center">
+        <a href="#section3" class="close" data-dismiss="alert">&times;</a>
+        <strong>Erreur : </strong> veuillez écrire un message
+      </div>
       <div id="error-alert" style="display: none" class="col-lg-6 col-lg-offset-3 alert alert-danger text-center">
         <a href="#section3" class="close" data-dismiss="alert">&times;</a>
         <strong>Erreur</strong>
