--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -199,20 +199,20 @@
     </div>
 
     <div class="container-fluid" id="section3">
-      <div id="success-alert" style="display: none" class="col-lg-6 col-lg-offset-3 alert alert-success text-center alert-dismissable fade in">
-        <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+      <div id="success-alert" style="display: none" class="col-lg-6 col-lg-offset-3 alert alert-success text-center">
+        <a class="close" data-hide="alert">&times;</a>
         <strong>Votre message a bien été envoyé !</strong> Nous vous recontacterons au plus vite :)
       </div>
       <div id="sender-error-alert" style="display: none" class="col-lg-6 col-lg-offset-3 alert alert-danger text-center alert-dismissable fade in">
-        <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+        <a class="close" data-hide="alert">&times;</a>
         <strong>Erreur : </strong> veuillez vérifier votre adresse e-mail
       </div>
       <div id="msg-error-alert" style="display: none" class="col-lg-6 col-lg-offset-3 alert alert-danger text-center alert-dismissable fade in">
-        <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+        <a class="close" data-hide="alert">&times;</a>
         <strong>Erreur : </strong> veuillez écrire un message
       </div>
       <div id="error-alert" style="display: none" class="col-lg-6 col-lg-offset-3 alert alert-danger text-center alert-dismissable fade in">
-        <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+        <a class="close" data-hide="alert">&times;</a>
         <strong>Erreur</strong>
       </div>
       <div class="row">
