--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,10 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" href="../imgs/logo.png" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <link href="style_index.css" rel="stylesheet">
   <link href="navbar.css" rel="stylesheet">
   <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="../javascript/google_localisation_inscription.js"></script>
   <style>
   /* Always set the map height explicitly to define the size of the div
@@ -93,7 +93,6 @@
         <div class="modal-body">
           <p>Votre compte va être activé très prochainement.
             <button class="btn btn-default pull-right" type="button" data-dismiss="modal"><i class="icon icon-times icon-lg"></i> Fermer</button></p>
-
           </div>
         </div>
       </div>
@@ -223,10 +222,9 @@
       </div>
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2">
-          <!-- <form class="form-horizontal" action="#" method="POST" onsubmit="return verifForm(this)"> -->
-          <form class="form-horizontal" id="contact-form" action="#section3" method="post"> <!-- onsubmit="return verifForm(this)"> -->
+          <form class="form-horizontal" id="contact-form" action="#section3"> <!-- onsubmit="return verifForm(this)"> -->
             <div class="form-group">
-              <input type="text" class="form-control" id="sender_mail" name="sender_mail" placeholder="Adresse email"> <!--  onblur="verifMail(this)"> -->
+              <input type="text" class="form-control" id="sender_mail" name="sender_mail" placeholder="Adresse email" onblur="checkMail(this)">
             </div>
             <div class="form-group ">
               <textarea  class="form-control" id="msg" name="msg" placeholder="Votre message" style="resize:none;" rows="5"></textarea>
