renamed <<mail>> to <<username>> for tests with backend

--- a/frontend/public/inscription.html
+++ b/frontend/public/inscription.html
@@ -120,7 +120,7 @@
             <!-- Text input-->
             <div class="form-group">
               <div class="col-md-6 col-md-offset-3">
-                <input id="mail" name="mail" type="text" placeholder="Adresse email" class="form-control input-md" required="">
+                <input id="mail" name="username" type="text" placeholder="Adresse email" class="form-control input-md" required="">
               </div>
             </div>
 
