--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -110,7 +110,7 @@
 
         <div class="dropup">
           <button class="btn btn-default btn-lg dropdown-toggle" type="button" data-toggle="dropdown">Devenir Relayer <span class="glyphicon glyphicon-edit"></span></button>
-          <form action="/users" method="POST" class="form-horizontal dropdown-menu">
+          <form action="/register" method="POST" class="form-horizontal dropdown-menu">
             <fieldset>
 
               <!-- Form Name -->
@@ -133,7 +133,7 @@
               <!-- Text input-->
               <div class="form-group">
                 <div class="col-md-10 col-md-offset-1">
-                  <input id="mail" name="mail" type="text" placeholder="Adresse email" class="form-control input-md" required="">
+                  <input id="mail" name="username" type="text" placeholder="Adresse email" class="form-control input-md" required="">
                 </div>
               </div>
 
