--- a/frontend/public/inscription.html
+++ b/frontend/public/inscription.html
@@ -92,7 +92,7 @@
   <div class="container-fluid" style="margin-top:100px;">
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
-        <form action="/users" method="POST" class="form-horizontal">
+        <form action="/register" method="POST" class="form-horizontal">
           <fieldset>
 
             <!-- Form Name -->
