--- a/frontend/public/inscription.html
+++ b/frontend/public/inscription.html
@@ -92,7 +92,7 @@
   <div class="container-fluid" style="margin-top:100px;">
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
-        <form action="/register" method="POST" class="form-horizontal">
+        <form action="" class="form-horizontal">
           <fieldset>
 
             <!-- Form Name -->
@@ -120,7 +120,7 @@
             <!-- Text input-->
             <div class="form-group">
               <div class="col-md-6 col-md-offset-3">
-                <input id="mail" name="username" type="text" placeholder="Adresse email" class="form-control input-md" required="">
+                <input id="username" name="username" type="text" placeholder="Adresse email" class="form-control input-md" required="">
               </div>
             </div>
 
@@ -142,7 +142,7 @@
             <!-- Text input-->
             <div class="form-group" id="locationField">
               <div class="col-md-6 col-md-offset-3">
-                <input id="autocomplete" name="address" type="text" placeholder="Adresse" class="form-control input-md" required="" onFocus="geolocate()">
+                <input id="autocomplete" name="address" type="text" placeholder="Adresse" class="form-control input-md" required="">
               </div>
             </div>
 
@@ -152,7 +152,7 @@
             <!-- Button -->
             <div class="form-group">
               <div class="col-md-4 col-md-offset-4">
-                <button a href="index.html" type="submit" class="btn btn-primary btn-success center-block" data-toggle="modal" data-target="#myModal">S'inscrire <span class="glyphicon glyphicon-ok"></span></button>
+                <button type="button" id="register_btn" class="btn btn-primary btn-success center-block" data-toggle="modal" data-target="#myModal">S'inscrire <span class="glyphicon glyphicon-ok"></span></button>
               </div>
             </div>
 
