forgot to change an id

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -133,7 +133,7 @@
               <!-- Text input-->
               <div class="form-group">
                 <div class="col-md-10 col-md-offset-1">
-                  <input id="mail" name="username" type="text" placeholder="Adresse email" class="form-control input-md" required="">
+                  <input id="username" name="username" type="text" placeholder="Adresse email" class="form-control input-md" required="">
                 </div>
               </div>
 
