forgot to include .js files

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -259,6 +259,7 @@
       <script src="../bootstrap/docs/assets/js/ie10-viewport-bug-workaround.js"></script>
 
       <script src="../javascript/contact.js"></script>
+      <script src="../javascript/register.js"></script>
 
       <script>
       $('a[href^="#"]').click(function(){
