--- a/frontend/public/inscription.html
+++ b/frontend/public/inscription.html
@@ -170,6 +170,6 @@
 
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBWLLyzwuKDu1Ys2az4cjGlm31gUN-2rDY&libraries=places&callback=initAutocomplete"
   async defer></script>
-  <script src="../javascript/contact.js"></script>
+  <script src="../javascript/register.js"></script>
 </body>
 </html>
