--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -126,7 +126,7 @@
                       <!-- Password confirm -->
                       <div class="form-group">
                         <label class="sr-only" for="password-confirm">Confirmez le mot de passe</label>
-                        <input class="form-control input-md" id="password-confirm" name="password-confirm" type="text" placeholder="Confirmez le mot de passe" required="" onblur="checkEquals(this)">
+                        <input class="form-control input-md" id="password_confirm" name="password_confirm" type="text" placeholder="Confirmez le mot de passe" required="" onblur="checkEquals(this)">
                       </div>
 
                       <!-- Button -->
