--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -108,7 +108,7 @@
                       <!-- Address -->
                       <div class="form-group" id="locationField">
                         <label class="sr-only" for="address">Adresse</label>
-                        <input class="form-control input-md" id="autocomplete" name="address"type="text" placeholder="Adresse" required="">
+                        <input class="form-control input-md" id="autocomplete" name="address"type="text" placeholder="Adresse" required="" onblur="checkLength(this)">
                       </div>
                       
                       <!-- Email -->
@@ -120,7 +120,7 @@
                       <!-- Password -->
                       <div class="form-group">
                         <label class="sr-only" for="password">Mot de passe</label>
-                        <input class="form-control input-md" id="password" name="password"type="text" placeholder="Mot de passe" required="">
+                        <input class="form-control input-md" id="password" name="password"type="text" placeholder="Mot de passe" required="" onblur="checkLength(this)">
                       </div>
                       
                       <!-- Password confirm -->
