solved a bug in console of navigator

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -52,7 +52,7 @@
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle glyphicon glyphicon-user" data-toggle="dropdown"><b> Inscription</b> <span class="caret"></span></a>
+            <a href="" class="dropdown-toggle glyphicon glyphicon-user" data-toggle="dropdown"><b> Inscription</b> <span class="caret"></span></a>
             <ul id="register-dp" class="dropdown-menu">
               <li>
                 <div class="row">
@@ -140,7 +140,7 @@
             </ul>
           </li>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle glyphicon glyphicon-log-in" data-toggle="dropdown"><b> Connexion</b> <span class="caret"></span></a>
+            <a href="" class="dropdown-toggle glyphicon glyphicon-log-in" data-toggle="dropdown"><b> Connexion</b> <span class="caret"></span></a>
             <ul id="login-dp" class="dropdown-menu">
               <li>
                 <div class="row">
