--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -114,7 +114,7 @@
                       <!-- Email -->
                       <div class="form-group">
                         <label class="sr-only" for="email">Adresse Email</label>
-                        <input class="form-control input-md" id="mail" name="username"type="text" placeholder="Adresse Email" required="" onblur="checkMail(this)" onfocus="highlight(this, false)">
+                        <input class="form-control input-md" id="username" name="username"type="text" placeholder="Adresse Email" required="" onblur="checkMail(this)" onfocus="highlight(this, false)">
                       </div>
                       
                       <!-- Password -->
