changing password type to password

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -126,13 +126,13 @@
                       <!-- Password -->
                       <div class="form-group">
                         <label class="sr-only" for="password">Mot de passe</label>
-                        <input class="form-control input-md" id="password" name="password"type="text" placeholder="Mot de passe" required="" onblur="checkLength(this)" onfocus="highlight(this, false)">
+                        <input class="form-control input-md" id="password" name="password"type="password" placeholder="Mot de passe" required="" onblur="checkLength(this)" onfocus="highlight(this, false)">
                       </div>
                       
                       <!-- Password confirm -->
                       <div class="form-group">
                         <label class="sr-only" for="password-confirm">Confirmez le mot de passe</label>
-                        <input class="form-control input-md" id="password_confirm" name="password_confirm" type="text" placeholder="Confirmez le mot de passe" required="" onblur="checkEquals(this)" onfocus="highlight(this, false)">
+                        <input class="form-control input-md" id="password_confirm" name="password_confirm" type="password" placeholder="Confirmez le mot de passe" required="" onblur="checkEquals(this)" onfocus="highlight(this, false)">
                       </div>
 
                       <!-- Button -->
