--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -98,6 +98,12 @@
                           <strong>Vous devez valider votre compte</strong>
                       </div>
                      
+                      <!------ Fill every fields ------>
+                      <div id="register-unknown-error-alert" style="display: none" class="alert alert-danger text-center alert-dismissable fade in">
+                          <a class="close" data-hide="alert">&times;</a>
+                          <strong>Erreur</strong>
+                      </div>
+
 
                       <!-- First name -->
                       <div class="form-group">
