changed message on validation

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -65,7 +65,7 @@
                       <!------ Confirmation window ------>
                       <div id="register-success-alert" style="display: none" class="alert alert-success text-center">
                           <a class="close" data-hide="alert">&times;</a>
-                          <strong>Inscription validée !</strong>
+                          <strong>Inscription validée !</strong> Un mail de confirmation vous a été envoyé !
                       </div>
                       
                       <!------ Wrong mail window ------>
