modified a href from # to nothing

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -56,7 +56,7 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Inscription <span class="caret"></span></a>
+          <a href="" class="dropdown-toggle" data-toggle="dropdown">Inscription <span class="caret"></span></a>
           <ul class="dropdown-menu" id="register-dp" role="menu">
             <li>
               <div class="row">
@@ -115,7 +115,7 @@
           </ul>
         </li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Login <span class="caret"></span></a>
+          <a href="" class="dropdown-toggle" data-toggle="dropdown">Connexion <span class="caret"></span></a>
           <ul id="login-dp" class="dropdown-menu">
             <li>
               <div class="row">
