added legend to register form

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -63,6 +63,9 @@
    							<div class="col-md-12">
                   <form class="form" action="" accept-charset="UTF-8" id="register-form">
 
+                    <!-- Form name -->
+                    <legend class="text-center">Inscription</legend>
+
                     <!------ Register alert window ------>
                     <div id="register-alert" style="display: none" class="alert text-center">
                         <a class="close" data-hide="alert">&times;</a>
