added registration form appear when user click on register link in connection dropdown

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -97,7 +97,7 @@
                                             </form>
                                         </div>
                                         <div class="bottom text-center">
-                                            Vous êtes nouveau ? <br> <a href="#"><b>Rejoignez nous !</b></a>
+                                            Vous êtes nouveau ? <br> <a href="" data-toggle="modal" data-target="#registerModal"><b>Rejoignez nous !</b></a>
                                         </div>
                                     </div>
                                 </li>
