added javascript verification for login form

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -71,7 +71,7 @@
                                                 <span id="text-login-alert"></span>
                                             </div>
                                             
-                                            <form class="form" action="" accept-charset="UTF-8" id="login-nav">
+                                            <form class="form" action="" accept-charset="UTF-8" id="login-form">
                                                 <!-- Username -->
                                                 <div class="form-group">
                                                     <label class="sr-only" for="login_username">Adresse Email</label>
