new landing page design

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -208,13 +208,11 @@
 
 
 <div class="container-fluid" id="home">
-  <div class="container" style="padding:50px;">
+  <div class="container">
 
-    <h1>Fatigués des relais colis? <br>Des avis de passage?</h1>
+    <h1 style="color: #CA5451">Une journée à la maison?</h1>
 
-    <p class="lead">Faites vous livrer chez votre voisin</p>
-
-    <h2 style="margin-top:150px;">Ou bien réceptionnez des colis pour vos voisins à hauteur de <strong>2€</strong> par colis</h2>
+    <h2 style="margin-top:40px;">Réceptionnez des colis pour vos voisins et soyez rémunéré !</h2>
 
     <button class="btn btn-default btn-lg" type="button" data-toggle="modal" data-target="#registerModal">Devenir Relayer <span class="glyphicon glyphicon-edit"></span></button>
 
