--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -210,7 +210,7 @@
 <div class="container-fluid" id="home">
   <div class="container">
 
-    <h1 style="color: #CA5451">Une journée à la maison?</h1>
+    <h1>Une journée à la maison?</h1>
 
     <h2 style="margin-top:40px;">Réceptionnez des colis pour vos voisins et soyez rémunéré !</h2>
 
