--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -44,7 +44,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" style="color:#F7230C!important" href="#"><span><img src="../imgs/logo.png" width="25" alt="Relayers"></span> Relayers</a>
+        <a class="navbar-brand" style="color:#e27e03!important" href="#"><span><img src="../imgs/logo.png" width="25" alt="Relayers"></span> Relayers</a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
