--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -58,7 +58,7 @@
 
         <!-- Navbar right -->
         <ul class="nav navbar-nav navbar-right">
-          <li> <a href="" data-toggle="modal" data-target="#registerModal"><span class="glyphicon glyphicon-new-window"></span> Inscription</a></li>
+          <li> <a href="" class="dropdown-toggle" data-toggle="modal" data-target="#registerModal"><span class="glyphicon glyphicon-new-window"></span> Inscription</a></li>
           <li class="dropdown"><a href="" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-log-in"></span> Connexion <span class="caret"></span></a>
             <!-------- Login dropdown -------->
             <ul id="login-dp" class="dropdown-menu">
