created a css directory. added social icons. navbar is bigger

--- a/frontend/public/espace_client.html
+++ b/frontend/public/espace_client.html
@@ -1,8 +1,8 @@
 <head>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css" rel="stylesheet"  type='text/css'>
-  <link href="navbar.css" rel="stylesheet">
-  <link rel="stylesheet" href="style_espace_client.css">
+  <link rel="stylesheet" href="../css/navbar.css">
+  <link rel="stylesheet" href="../css/espace_client.css">
 </head>
 <body>
 
