--- a/frontend/public/calendar.html
+++ b/frontend/public/calendar.html
@@ -7,7 +7,7 @@
   <title>Calendar</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-  <link href="calendar.css" rel="stylesheet" type="text/css">
+  <link href="../css/calendar.css" rel="stylesheet" type="text/css">
   <link href="http://www.jqueryscript.net/css/jquerysctipttop.css" rel="stylesheet" type="text/css">
   <style>
   body { font-family:'Open Sans'; background-color:#ECF0F1;}
