--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,9 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" href="../imgs/logo.png" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link href="style_index.css" rel="stylesheet">
-  <link href="navbar.css" rel="stylesheet">
-  <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="../css/index.css">
+  <link rel="stylesheet" href="../css/navbar.css">
+  <link rel="stylesheet" href="../css/social_icons.css">
+  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="../javascript/google_localisation_inscription.js"></script>
   <style>
@@ -34,84 +36,83 @@
 
 <body data-spy="scroll" data-target=".navbar">
 
-<<<<<<< HEAD
   <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navigation">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand text-uppercase" href="#home"><span class="label text-capitalize">RELAYERS</span></a>
-        </div>
+    <div class="container">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navigation">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand text-uppercase" href="#home"> <span> <img src="../imgs/logo.png" width="25" alt="Relayers"> </span> <span class="label text-capitalize">RELAYERS</span></a>
+      </div>
 
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="navigation">
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="#about">À propos</a></li>
-                <li><a href="#contact">Contact</a></li>
-                <li class="dropdown"><button type="button" class="btn navbar-btn btn-circle dropdown-toggle" data-toggle="dropdown">Connexion </button>
-                  <!-------- Login dropdown -------->
-                  <ul id="login-dp" class="dropdown-menu">
-                    <li>
-                      <div class="row">
-                        <div class="col-md-12">
-                          <!------ Login alert window ------>
-                          <div id="login-alert" style="display: none" class="alert alert-danger text-center">
-                            <a class="close" data-hide="alert">&times;</a>
-                            <span id="text-login-alert"></span>
-                          </div>
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="navigation">
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="#about" class="navbar-head">À propos</a></li>
+          <li><a href="#contact" class="navbar-head">Contact</a></li>
+          <li class="dropdown"><button type="button" class="btn navbar-btn btn-circle dropdown-toggle" data-toggle="dropdown">Connexion</button>
+            <!-------- Login dropdown -------->
+            <ul id="login-dp" class="dropdown-menu">
+              <li>
+                <div class="row">
+                  <div class="col-md-12">
+                    <!------ Login alert window ------>
+                    <div id="login-alert" style="display: none" class="alert alert-danger text-center">
+                      <a class="close" data-hide="alert">&times;</a>
+                      <span id="text-login-alert"></span>
+                    </div>
 
-                          <form class="form" action="" accept-charset="UTF-8" id="login-form">
-                            <!-- Username -->
-                            <div class="form-group">
-                              <label class="sr-only" for="login_username">Adresse Email</label>
-                              <div class="input-group">
-                                <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                                <input type="email" class="form-control input-md" id="login_username" placeholder="Adresse mail">
-                              </div>
-                            </div>
-
-                            <!-- Password -->
-                            <div class="form-group">
-                              <label class="sr-only" for="login_password">Mot de passe</label>
-                              <div class="input-group">
-                                <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-                                <input type="password" class="form-control input-md" id="login_password" placeholder="Mot de passe">
-                              </div>
-                              <div class="help-block text-right"><a href="">Mot de passe oublié ?</a>
-                              </div>
-                            </div>
-
-                            <div class="form-group">
-                              <button type="button" id="login_btn" class="btn btn-default btn-block">Se connecter</button>
-                            </div>
-                            <div class="checkbox">
-                              <label>
-                                <input type="checkbox"> Rester connecter
-                              </label>
-                            </div>
-                          </form>
-                        </div>
-                        <div class="bottom text-center">
-                          Vous êtes nouveau ? <br> <a href="" data-toggle="modal" data-target="#registerModal"><b>Rejoignez nous !</b></a>
+                    <form class="form" action="" accept-charset="UTF-8" id="login-form">
+                      <!-- Username -->
+                      <div class="form-group">
+                        <label class="sr-only" for="login_username">Adresse Email</label>
+                        <div class="input-group">
+                          <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                          <input type="email" class="form-control input-md" id="login_username" placeholder="Adresse mail">
                         </div>
                       </div>
-                    </li>
-                  </ul>
-                </li>
+
+                      <!-- Password -->
+                      <div class="form-group">
+                        <label class="sr-only" for="login_password">Mot de passe</label>
+                        <div class="input-group">
+                          <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+                          <input type="password" class="form-control input-md" id="login_password" placeholder="Mot de passe">
+                        </div>
+                        <div class="help-block text-right"><a href="">Mot de passe oublié ?</a>
+                        </div>
+                      </div>
+
+                      <div class="form-group">
+                        <button type="button" id="login_btn" class="btn btn-default btn-block">Se connecter</button>
+                      </div>
+                      <div class="checkbox">
+                        <label>
+                          <input type="checkbox"> Rester connecter
+                        </label>
+                      </div>
+                    </form>
+                  </div>
+                  <div class="bottom text-center">
+                    Vous êtes nouveau ? <br> <a href="" data-toggle="modal" data-target="#registerModal"><b>Rejoignez nous !</b></a>
+                  </div>
+                </div>
+              </li>
             </ul>
-        </div>
+          </li>
+        </ul>
       </div>
-    </nav>
+    </div>
+  </nav>
 
 
   <!-------- Register modal -------->
-  <div id="registerModal" class="modal fade">
+  <div id="registerModal" class="modal fade" role="dialog">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
@@ -272,8 +273,8 @@
       <div class="col-lg-8 col-lg-offset-2 text-center">
         <h3>Suivez-nous sur les réseaux sociaux !</h3>
         <ul class="list-inline">
-          <li><a href="#" class="btn btn-default btn-lg"><i class="fa fa-twitter"> <span class="network-name">Twitter</span></i></a></li>
-          <li><a href="#" class="btn btn-default btn-lg"><i class="fa fa-facebook"> <span class="network-name">Facebook</span></i></a></li>
+          <li><a href="#" class="fa fa-twitter"></a></li>
+          <li><a href="#" class="fa fa-facebook"></a></li>
         </ul>
       </div>
     </div>
