--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -209,7 +209,7 @@
 
     <h1>Une journée à la maison?</h1>
 
-    <h2 style="margin-top:40px;">Réceptionnez des colis pour vos voisins et soyez rémunéré !</h2>
+    <h2>Réceptionnez des colis pour vos voisins et soyez rémunéré !</h2>
 
     <button class="btn btn-default btn-lg" type="button" data-toggle="modal" data-target="#registerModal">Devenir Relayer <span class="glyphicon glyphicon-edit"></span></button>
 
@@ -261,7 +261,7 @@
           <div class="form-group">
             <input type="text" class="form-control" id="sender_mail" name="sender_mail" placeholder="Adresse email" onblur="checkMail(this)" onfocus="highlight(this, false)">
           </div>
-          <div class="form-group ">
+          <div class="form-group">
             <textarea  class="form-control" id="msg" name="msg" placeholder="Votre message" style="resize:none;" rows="5"></textarea>
           </div>
           <button type="button" class="btn btn-default center-block" id="contact_btn">Envoyer</button>
