--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -46,7 +46,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand text-uppercase" href="#home"> <span> <img src="../imgs/logo.png" width="25" alt="Relayers"> </span> <span class="label text-capitalize">RELAYERS</span></a>
+        <a class="navbar-brand text-uppercase" href="#home"> <span> <img src="../imgs/logo.png" width="50" alt="Relayers"> </span> <span class="label text-capitalize" style="font-size: 125%">RELAYERS</span></a>
       </div>
 
 
@@ -204,7 +204,22 @@
 </div>
 
 
+<!-------- Mail confirmed modal -------->
+<div id="mail-confirmedModal" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal"> &times;</button>
+        <!-- Form name -->
+        <h4 class="text-center"><span id="text-mail-confirmedModal"></span></h4>
+      </div>
+</div>
+</div>
+</div>
+
+
 <div class="container-fluid" id="home">
+
   <div class="container">
 
     <h1>Une journée à la maison?</h1>
@@ -247,7 +262,7 @@
     </div>
     <div class="row">
       <!------ Contact alert window ------>
-      <div id="contact-alert" style="display: none" class="col-lg-6 col-lg-offset-3 alert alert-success text-center">
+      <div id="contact-alert" style="display: none" class="col-lg-6 col-lg-offset-3 alert text-center">
         <a class="close" data-hide="alert">&times;</a>
         <span id="text-contact-alert"></span>
       </div>
