--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -210,8 +210,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal"> &times;</button>
-        <!-- Form name -->
-        <h4 class="text-center"><span id="text-mail-confirmedModal"></span></h4>
+        <h4 class="text-center"><span id="text-mail-confirmedModal"></span> <span id="glyphicon-mail-confirmedModal" class="glyphicon"></span></h4>
       </div>
 </div>
 </div>
