logo was too big in small screens

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -46,7 +46,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand text-uppercase" href="#home"> <span> <img src="../imgs/logo.png" width="50" alt="Relayers"> </span> <span class="label text-capitalize" style="font-size: 125%">RELAYERS</span></a>
+        <a class="navbar-brand text-uppercase" href="#home"> <span> <img src="../imgs/logo.png" id="logo_title" alt="Relayers"> </span> <span class="label text-capitalize" id="text_title">RELAYERS</span></a>
       </div>
 
 
