added social networks redirection

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -291,8 +291,8 @@
             <div class="col-lg-8 col-lg-offset-2 text-center">
               <h3>Suivez-nous sur les réseaux sociaux !</h3>
               <ul class="list-inline">
-                <li><a href="#" class="fa fa-twitter"></a></li>
-                <li><a href="#" class="fa fa-facebook"></a></li>
+                <li><a href="https://twitter.com/Relayers_fr" class="fa fa-twitter"></a></li>
+                <li><a href="https://www.facebook.com/Relayers.fr" class="fa fa-facebook"></a></li>
               </ul>
             </div>
           </div>
